# batch-tagger

./: Cargo.toml  README.md  sqlx-data.json
.github/workflows/: artifacts.yml
migrations/: 20211103193510_initial_submission_schema.down.sql  20211103193510_initial_submission_schema.up.sql
src/: main.rs  sites.rs
