[package]
name = "batch-tagger"
version = "0.1.0"
edition = "2021"
authors = ["Syfaro <syfaro@huefox.com>"]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"

tokio = { version = "1", features = ["macros"] }

reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "cookies", "json"] }
scraper = "0.12"
regex = "1"
chrono = "0.4"

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

clap = "3.0.0-beta.5"

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "offline", "json"]
